--- a/release/release/doctype/release/release.json
+++ b/release/release/doctype/release/release.json
@@ -1,5 +1,6 @@
 {
  "actions": [],
+ "allow_rename": 1,
  "creation": "2020-12-08 16:06:04.209652",
  "doctype": "DocType",
  "editable_grid": 1,
@@ -122,7 +123,7 @@
  "index_web_pages_for_search": 1,
  "is_submittable": 1,
  "links": [],
- "modified": "2020-12-10 13:27:03.648825",
+ "modified": "2020-12-11 00:54:20.379598",
  "modified_by": "Administrator",
  "module": "Release",
  "name": "Release",
