refactor: Use GitHub APIs instead of local clones

--- a/release/release/doctype/release/release.json
+++ b/release/release/doctype/release/release.json
@@ -19,6 +19,7 @@
   "release_checklist_section",
   "check_ready_for_release",
   "check_post_on_discuss",
+  "bump_commit_created",
   "small_text_13",
   "amended_from"
  ],
@@ -118,12 +119,19 @@
    "fieldname": "section_break_2",
    "fieldtype": "Section Break",
    "hide_border": 1
+  },
+  {
+   "default": "0",
+   "fieldname": "bump_commit_created",
+   "fieldtype": "Check",
+   "label": "Bump Commit Created",
+   "read_only": 1
   }
  ],
  "index_web_pages_for_search": 1,
  "is_submittable": 1,
  "links": [],
- "modified": "2020-12-11 00:54:20.379598",
+ "modified": "2021-02-23 23:40:25.835805",
  "modified_by": "Administrator",
  "module": "Release",
  "name": "Release",
